# nix-ai

./: .file-size.yml  .markdownlint-cli2.jsonc  .markdownlint-cli2.yaml  .osv-scanner.toml  .pre-commit-config.yaml  .readme-validator.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  README.md  VERSION  cspell.json  flake.nix  osv-scanner.toml  renovate.json  renovate.json5
.github/: zizmor.yml
docs/: .readme-validator.yaml  ai-tool-decision-tree.md  benchmark-schema.md  mlx-benchmarks-history.md  mlx-benchmarks.md
flake/: home-manager-modules.nix
lib/: ai-stack-models.nix  checks.nix  claude-settings.nix  python.nix  versions.nix
mlx-server/: .envrc  flake.nix  osv-scanner.toml  pyproject.toml
mlx-server/benchmarks/: common.py  report.py  run_all.sh  test_code_generation.py  test_code_review.py  test_conversation.py  test_instruction_following.py  test_long_context.py  test_reasoning.py  test_structured_output.py  test_tool_use.py
mlx-server/benchmarks/fixtures/buggy_code/: auth_bypass.py  clean_code.py  memory_leak.py  race_condition.py  subtle_off_by_one.py  type_coercion.js
mlx-server/benchmarks/tests/: test_code_generation.py  test_code_review.py  test_conversation.py  test_instruction_following.py  test_long_context.py  test_reasoning.py  test_structured_output.py  test_tool_use.py
modules/: ai-aliases.zsh  ai-shell.nix  ai-tools.nix  claude-config.nix  claude-latest.nix  codex.nix  copilot.nix  default.nix  gemini.nix  mlx-chat.py  mlx.nix  ollama.nix  open-webui.nix
nix-ai-claude/: CLAUDE.md  README.md  flake.nix
vars/: ai-stack.nix
(+433 files in other folders)
